# docs/swagger.json
@@ -65,9 +65,9 @@
                 "summary": "创建文章",
                 "parameters": [
                     {
-                        "type": "string",
+                        "type": "integer",
                         "description": "标签ID列表",
-                        "name": "tag_ids",
+                        "name": "tag_id",
                         "in": "formData"
                     },
                     {
@@ -107,7 +107,7 @@
                     {
                         "type": "file",
                         "description": "cover封面图",
-                        "name": "image",
+                        "name": "img",
                         "in": "formData",
                         "required": true
                     }
@@ -179,8 +179,9 @@
                     {
                         "type": "string",
                         "description": "文章ID",
-                        "name": "id",
-                        "in": "query"
+                        "name": "article_id",
+                        "in": "path",
+                        "required": true
                     },
                     {
                         "type": "string",
@@ -212,6 +213,12 @@
                         "name": "modified_by",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "附属标签",
+                        "name": "tag_id",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
